2010-02-21  Chong Yidong  <cyd@stupidchicken.com>

	* m/arm.h: Define the LIB_GCC flag to be -lgcc_s (Bug#5518).

2010-02-18  Stefan Monnier  <monnier@iro.umontreal.ca>

	* term.c (fatal): Add a final \n if needed (bug#5596).

2010-02-18  Chong Yidong  <cyd@stupidchicken.com>

	* nsterm.m (ns_ring_bell): Revert last change (Bug#5569).

2010-02-18  Glenn Morris  <rgm@gnu.org>

	* callint.c (Finteractive): Doc fix.

2010-02-18  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>  (tiny change)

	* coding.c (record_conversion_result):
	Handle CODING_RESULT_INSUFFICIENT_DST.
	(decode_coding_object): Record CODING_RESULT_INSUFFICIENT_MEM on
	memory allocation error.

2010-02-17  Kenichi Handa  <handa@m17n.org>

	* coding.c (decode_coding_ccl): Don't setup ccl program here.
	Fix for the case that the output buffer is fullfilled.
	(decode_coding): Setup ccl program here.  Keep looping when the
	decoder stopped because the output buffer is
	fullfilled (bug#5534).

	* ccl.c (ccl_driver): Never reset ic to CCL_HEADER_MAIN.

2010-02-13  Jan Djärv  <jan.h.d@swipnet.se>

	* xterm.c (x_clear_frame_area): Call gtk_widget_queue_draw if USE_GTK,
	bug #5571.
	(XTflash): Use Gdk-routines if USE_GTK so scroll bars don't get
	overdrawn.

2010-02-10  Jan Djärv  <jan.h.d@swipnet.se>

	* xsmfns.c (x_session_initialize): Move initialization of ice_fd and
	doing_interact here.
	(ice_connection_closed): New function.
	(x_session_check_input, smc_die_CB, ice_io_error_handler)
	(ice_conn_watch_CB, x_session_close): Call ice_connection_closed.
	(x_session_check_input): Call IceCloseConnection if IceProcessMessages
	returns I/O error.
	(ice_conn_watch_CB): Call add_keyboard_wait_descriptor on ice_fd,
	bug #5512.

2010-02-08  Francis Devereux  <francis@devrx.org>  (tiny change)

	* nsfont.m (nsfont_open): The system's value for the font descent
	is negative, so round it down to avoid clipping.

2010-02-06  Chong Yidong  <cyd@stupidchicken.com>

	* charset.c (load_charset_map_from_file)